--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
+    <title>Nor Quiz | The test</title>
 </head>
 <body>
     <div class="header">
@@ -21,9 +21,9 @@
                 <p>1: what is the other name of mogadisho</p>
                 <div class="radio">
                     <input type="radio" name="q1" value="A" checked>
-                    <label class="">Xamar</label><br>
+                    <label class="">Bosaaso</label><br>
                     <input type="radio" name="q1" value="B">
-                    <label class="">Ceel-waaq</label>
+                    <label class="">Xamar</label>
                 </div>
             </div>
 
